--- a/client/src/components/CategoryArticleList/CategoryArticleList.css
+++ b/client/src/components/CategoryArticleList/CategoryArticleList.css
@@ -1,7 +1,12 @@
 .category-article-list-main {
-    border: 3px;
+    /* width: 100px; */
+    /* border: 3px;
     border-color: antiquewhite;
-    border-style: outset;
+    border-style: outset; */
+}
+
+.category-article-list-title {
+    font-size: 50px;
 }
 
 /* .list-article-text {
@@ -9,5 +14,8 @@
 } */
 
 .list-articles {
+    display: flex;
+    /* width: 100px; */
+    justify-content: center;
     list-style-type: none;
 }
