--- a/client/src/pages/ArticlePage/ArticlePage.css
+++ b/client/src/pages/ArticlePage/ArticlePage.css
@@ -23,6 +23,11 @@
   /* background: #cc0000; */
 }
 
+.article-page-head-image {
+  display: flex;
+  justify-content: center;
+}
+
 .article-header h2 {
   font-size: 1.8rem;
   margin-bottom: 0.5rem;
