--- a/client/src/components/ArticleList/ArticleList.css
+++ b/client/src/components/ArticleList/ArticleList.css
@@ -4,5 +4,7 @@
     list-style-type: none;
     
     width: 1200px;
-    height: 500px;
+    /* height: 500px; */
+    /* TODO: for testing */
+    border: 1px solid green;
 }
