--- a/client/src/components/ArticleList/ArticleList.css
+++ b/client/src/components/ArticleList/ArticleList.css
@@ -1,10 +1,15 @@
-.article-list-ul {
+.article-list-main {
     display: flex;
     justify-content: center;
+}
+
+.article-list-ul {
+    justify-content: center;
+    width: 100%;
+    height: 100%;
+
     list-style-type: none;
-    
-    width: 1200px;
-    /* height: 500px; */
+
     /* TODO: for testing */
-    border: 1px solid green;
+    /* border: 1px solid green; */
 }
