--- a/client/src/components/ArticleListItem/ArticleListItem.css
+++ b/client/src/components/ArticleListItem/ArticleListItem.css
@@ -1,33 +1,42 @@
 .article-list-item {
-    /* width: 300px; */
-    /* width: 80%; */
+    max-height: 30rem;
+    max-width: 40rem;
+    /* width: 15rem; */
+
     padding: 10px;
     margin: 20px;
+
     border-bottom: 1px;
     border-color: gray;
     border-bottom-style: solid;
-    text-align: left;
+    text-align: left;  
 
-    max-width: 20rem;
-
-    border: 1px solid red;
+    /* TODO: for testing */
+    /* border: 1px solid red; */
 }
 
 .article-list-item-head-image {
-    /* width: 200px; */
-    width: 80%;
-    /* width: 100%; */
-    /* text-align: center; not working? */
+    width: 100%;
+}
+
+/* From the BBC website, in an Article List Item, the font sizes are:
+Title - 18px
+Description - 14px
+Undertext - 12px */
+
+.article-list-item-title-header {
+  font-size: 18px;
+    margin: 5px;
+    padding: 0px;
+}
+
+.article-list-item-description {
+  font-size: 14px;
 }
 
 .article-list-item-undertext {
     font-size: 12px;
     text-align: center;
-}
-
-.article-list-item-title-header {
-    margin: 5px;
-    padding: 0px;
 }
 
 .article-list-item-title {
