--- a/client/src/components/FeaturedArticle/FeaturedArticle.css
+++ b/client/src/components/FeaturedArticle/FeaturedArticle.css
@@ -1,16 +1,28 @@
+.featured-article {
+    display: flex;
+    gap: 5rem;
+    margin-bottom: 2rem;
+    border-bottom: 2px solid #eee;
+    padding-bottom: 2rem;
+}
+
 .featured-article-header {
     text-align: left;
 }
 
-.featured-article-meta {
-
+.featured-article-title {
+    font-size: 28px;    
 }
 
-.featured-article {
-    display: flex;
-    gap: 100px;
+.featured-article-description {
+  font-size: 16px;
+}
+
+.featured-article-undertext {
+    font-size: 13px;
+    text-align: center;
 }
 
 .featured-article-image {
-    width: 400px;
+    width: 800px;
 }
