--- a/client/src/components/GamesList/GameItem/GameItem.css
+++ b/client/src/components/GamesList/GameItem/GameItem.css
@@ -5,7 +5,7 @@
     min-height: 8rem;
     
     /* TODO: for testing */
-    border: 1px solid blue;
+    /* border: 1px solid blue; */
 }
 
 .game-item-image {
