--- a/client/src/components/GamesList/GamesList.css
+++ b/client/src/components/GamesList/GamesList.css
@@ -15,5 +15,8 @@
 .games-list > .game-item-separator + .game-item-separator {
     margin-left: 5px;
     padding-left: 5px;
-    border-left: 1px solid #bbb;
+
+    border-left-width: 1px;
+    border-left-style: solid;
+    border-left-color: var(--border-separator-color);
 }
