--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,26 +1,24 @@
 :root {
+  /* CONSTANTS */
+  --title-color: black;
+  --description-color: gray;
+  --undertext-color: black;
+  --border-separator-color: gray;
+  --border-big-separator-color: black;
+
   font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
   font-weight: 400;
 
-  color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
-  /* background-color: white; */
-
   font-synthesis: none;
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  -moz-osx-font-smoothing: grayscale;  
 }
 
 a {
   font-weight: 500;
-  color: #646cff;
   text-decoration: inherit;
-}
-a:hover {
-  color: #535bf2;
 }
 
 body {
@@ -43,27 +41,57 @@ button {
   font-size: 1em;
   font-weight: 500;
   font-family: inherit;
-  background-color: #1a1a1a;
+  /* background-color: #1a1a1a; */
   cursor: pointer;
   transition: border-color 0.25s;
 }
-button:hover {
+/* button:hover {
   border-color: #646cff;
-}
+} */
 button:focus,
 button:focus-visible {
   outline: 4px auto -webkit-focus-ring-color;
 }
 
-@media (prefers-color-scheme: light) {
+@media (prefers-color-scheme: dark) {
   :root {
-    color: #213547;
-    background-color: #ffffff;
+    /* color: white; */
+    background-color: black;
+
+    --title-color: white;
+    --description-color: gray;
+    --undertext-color: white;
+    --border-separator-color: gray;
+    --border-big-separator-color: white;
   }
+
   a:hover {
     color: #747bff;
   }
+
   button {
-    background-color: #f9f9f9;
+    background-color: black;  
+    color: white;  
+  }
+}
+
+@media (prefers-color-scheme: light) {
+  :root {
+    background-color: #ffffff;
+
+    --title-color: black;
+    --description-color: gray;
+    --undertext-color: black;
+    --border-separator-color: gray;
+    --border-big-separator-color: black;
+  }
+
+  a:hover {
+    color: #747bff;
+  }
+
+  button {
+    background-color: white;
+    color: color;
   }
 }
