--- a/client/src/components/Games/TicTacToeComponents/Cell/Cell.css
+++ b/client/src/components/Games/TicTacToeComponents/Cell/Cell.css
@@ -1,4 +1,6 @@
 .tictac-cell {
+   position: relative;
+
    width: 7rem;
    aspect-ratio: 1 / 1;
 
@@ -16,6 +18,28 @@
    border: 2px;
    border-color: aqua;
    border-style: solid;
+
+   /* ensures the circle doesn’t spill out */
+   overflow: hidden;
+}
+
+.tictac-cell-marked::before {
+  content: "";
+  position: absolute;
+  top: 50%;
+  left: 50%;
+
+  /* size of the circle */
+  width: 6rem;
+  height: 6rem;
+
+  transform: translate(-50%, -50%);
+  border: 2px solid red;
+  border-radius: 50%;
+
+  /* allows clicks to go through */
+  pointer-events: none;
+  box-sizing: border-box;
 }
 
 .tictac-cell-symbol {
