--- a/client/src/components/Games/TicTacToeComponents/Dice/Dice.css
+++ b/client/src/components/Games/TicTacToeComponents/Dice/Dice.css
@@ -1,5 +1,56 @@
 .dice {
-    /* background-color: black; */
-    color: whitesmoke;
-    /* display: inline-block; */
+  position: relative;
+  color: whitesmoke;
+  /* or block, depending on your layout */
+  /* display: inline-block; */
+}
+
+.dice-ghost,
+.dice-main {
+  position: absolute;
+  top: 0;
+  left: 0;
+}
+
+.dice-ghost {
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: 0;
+  opacity: 0.5;
+  pointer-events: none;
+}
+
+.dice-ghost.grow {
+  animation: growThenDisappear 0.5s ease forwards;
+}
+
+.dice-main {
+  position: relative;
+  z-index: 1;
+}
+
+
+@keyframes growThenDisappear {
+  0% {
+    transform: scale(1);
+    opacity: 0.8;
+  }
+  100% {
+    transform: scale(1.3);
+    opacity: 0;
+  }
+}
+
+.dice-ghost {
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: 0;
+  opacity: 0.5;
+  pointer-events: none;
+}
+
+.dice-ghost.animate {
+  animation: growThenDisappear 0.5s ease forwards;
 }
