--- a/client/src/components/Games/TicTacToeComponents/Game/TicTacToeGame.css
+++ b/client/src/components/Games/TicTacToeComponents/Game/TicTacToeGame.css
@@ -13,20 +13,28 @@
   color: var(--title-color);
 }
 
-.current_move {
+.current-move {
     display: flex;
     justify-content: center;
     align-items: center;
 }
 
-.current_player {
-    font-size: 50px;
+.current-player {
+    height: 6rem;
+    aspect-ratio: 1/1;
+
     color: var(--title-color);
     /* display: inline-block; */
 }
 
-.current_player_symbol {
+.current-player-symbol {
     font-size: 100px;
+    line-height: 1;
+}
+
+.current-move-dice {
+    height: 6rem;
+    aspect-ratio: 1/1;
 }
 
 .information-display-div {
