another small dice color correction

--- a/client/src/components/Games/TicTacToeComponents/Dice/Dice.css
+++ b/client/src/components/Games/TicTacToeComponents/Dice/Dice.css
@@ -1,6 +1,6 @@
 .dice {
   position: relative;
-  color: whitesmoke;
+  color: var(--title-color);
   /* or block, depending on your layout */
   /* display: inline-block; */
 }
