--- a/client/src/components/Games/TicTacToeComponents/WinnerOverlay/WinnerOverlay.css
+++ b/client/src/components/Games/TicTacToeComponents/WinnerOverlay/WinnerOverlay.css
@@ -2,14 +2,14 @@
     position: fixed;
     inset: 0;
     z-index: 50;
-    background-color: rgba(0, 0, 0, 0.5);
+    background-color: var(--global-background-color);
     display: flex;
     align-items: center;
     justify-content: center;
 }
 
 .winner-content {
-    background-color: white;
+    background-color: var(--global-background-color);
     padding: 2rem;
     border-radius: 0.5rem;
     box-shadow: 0 20px 25px -5px rgb(0 0 0 / 0.1);
@@ -22,18 +22,18 @@
     line-height: 1.75rem;
     font-weight: 700;
     margin-bottom: 1rem;
-    color: black;
+    color: var(--title-color);
 }
 
 .winner-message {
     margin-bottom: 1.5rem;
-    color: black;
+    color: var(--title-color);
 }
 
 .winner-button {
     padding: 0.5rem 1.5rem;
     background-color: rgb(37 99 235);
-    color: white;
+    color: var(--global-background-color);
     border-radius: 0.375rem;
     transition: background-color 0.2s;
 }
