--- a/client/src/components/Footer/Footer.css
+++ b/client/src/components/Footer/Footer.css
@@ -4,7 +4,6 @@
 
   border-top: 3px solid #cc0000;
   border-width: 1px;
-  /* padding: 2rem 0rem; */
 }
 
 .footer-undertext {
@@ -12,7 +11,7 @@
 }
 
 .footer-content {
-  max-width: 1200px;
+  max-width: 75em;
   margin: 0 auto;
   text-align: center;
 }
@@ -33,7 +32,7 @@
   color: #cc0000;
 }
 
-@media (max-width: 480px) {
+@media (max-width: 37.5em) {
   .legal-links {
     flex-direction: column;
     gap: 0.5rem;
