--- a/client/src/components/GamesList/GamesList.css
+++ b/client/src/components/GamesList/GamesList.css
@@ -22,12 +22,10 @@
     margin-left: 5px;
     padding-left: 5px;
 
-    border-left-width: 1px;
-    border-left-style: solid;
-    border-left-color: var(--border-separator-color);
+    border-left: 1px var(--border-separator-color) solid;
 }
 
-@media (max-width: 600px) {
+@media (max-width: 37.5em) {
     .games-list-items {
         display: inline-block;
         justify-content: center;
@@ -42,8 +40,5 @@
         padding-left: 0;
         
         border: 0;
-        /* border-left-width: 1px;
-        border-left-style: solid;
-        border-left-color: var(--border-separator-color); */
     }
 }
