--- a/client/src/components/Header/Header.css
+++ b/client/src/components/Header/Header.css
@@ -1,22 +1,43 @@
 .site-header {
   width: 100%;
   margin-bottom: 3rem;
+  /* padding-bottom: 1rem; */
 
-  padding-bottom: 1rem;
   border-bottom: 3px solid #cc0000;
   border-width: 1px;
 }
 
 .nav-button {
-  padding: 0.8rem 1.5rem;
-  margin: 0 0.5rem;
+  /* padding: 0.8rem 1.5rem; */
+  /* margin: 0 0.5rem; */
   border: none;
   font-size: 1.1rem;
+
   transition: all 0.3s ease;
 }
 
 .nav-button:hover {
   background: #666666;
+  /* border-bottom: 2px white solid; */
+}
+
+.nav-a-link-wrapper {
+  --nav-a-link-border-bottom-size: 0.2rem;
+
+  padding: 1rem;
+  border-bottom: var(--nav-a-link-border-bottom-size) transparent solid;
+}
+
+.nav-a-link-wrapper:hover {
+  border-bottom: var(--nav-a-link-border-bottom-size) var(--title-color) solid;
+  background-color: darkgray;
+  
+  transition: all 0.3s ease;
+}
+
+.nav-link.active {
+  /* color: var(--title-color); */
+  border-bottom: 0.2rem var(--title-color) solid;
 }
 
 .logo {
@@ -41,6 +62,19 @@
   filter: drop-shadow(0 0 2em #61dafbaa);
 }
 
+.header-navbar-list {
+  /* display: grid; */
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
+  /* grid-template-columns: repeat(4, 1fr); */
+  /* gap: 1rem; */
+
+  /* grid-template-columns: 100; */
+  /* grid-template-rows: 100; */
+}
+
 @keyframes logo-spin {
   from {
     transform: rotate(0deg);
@@ -50,29 +84,17 @@
   }
 }
 
-.header-navbar-list {
-  /* display: grid; */
-  /* grid-template-columns: repeat(4, 1fr); */
-  /* gap: 1rem; */
-
-  /* grid-template-columns: 100; */
-  /* grid-template-rows: 100; */
-
-  align-items: center;
-  justify-content: center;
-}
-
 @media (prefers-reduced-motion: no-preference) {
   a:nth-of-type(2) .logo {
     animation: logo-spin infinite 20s linear;
   }
 }
 
-@media (max-width: 600px) {
+@media (max-width: 37.5em) {
   .header-navbar-list {
     display: grid;
-    grid-template-columns: repeat(2, 1fr);
-    grid-template-rows: repeat(2, auto);
     justify-items: center;
+    grid-template-columns: repeat(2, 1fr);
+    grid-template-rows: repeat(2, auto);    
   }
 }
