--- a/client/src/components/GamesList/GamesList.css
+++ b/client/src/components/GamesList/GamesList.css
@@ -1,44 +1,52 @@
 .games-list-section {
-    justify-content: center;
-
-    /* TODO: for testing */
-    /* border: 1px solid orangered; */
-}
-
-.games-list-items {
+    margin: 0;
+    padding: 0;
     display: flex;
     justify-content: center;
-    align-items: center;
-
-    /* TODO: for testing */
-    /* border: 1px solid orange; */
 }
 
 .games-list-title {
     color: var(--title-color);
+    font-size: 1.8rem;
+    font-weight: 500;
+    text-align: center;
+    margin-bottom: 1.5rem;
+    letter-spacing: 1px;
+    opacity: 0.9;
+    text-transform: uppercase;
+    font-family: 'Arial', sans-serif;
 }
 
-.games-list-items > .game-item-separator + .game-item-separator {
-    margin-left: 5px;
-    padding-left: 5px;
-
-    border-left: 1px var(--border-separator-color) solid;
+.games-list-items {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
+    gap: 1rem;
+    max-width: 900px;
+    margin: 0 auto;
+    padding: 0 1rem;
+    width: 100%;
 }
 
-@media (max-width: 37.5em) {
+@media (max-width: 768px) {
     .games-list-items {
-        display: inline-block;
-        justify-content: center;
-        align-items: center;
-    
-        /* TODO: for testing */
-        /* border: 1px solid orange; */
+        grid-template-columns: 1fr;
+        gap: 1.5rem;
+        padding: 0 0.5rem;
     }
+    
+    .games-list-title {
+        font-size: 2rem;
+        margin-bottom: 1.5rem;
+    }
+}
 
-    .games-list-items > .game-item-separator + .game-item-separator {
-        margin-left: 0;
-        padding-left: 0;
-        
-        border: 0;
+@media (max-width: 480px) {
+    .games-list-items {
+        grid-template-columns: 1fr;
+        gap: 1rem;
+    }
+    
+    .games-list-title {
+        font-size: 1.8rem;
     }
 }
