--- a/client/src/components/Header/Header.css
+++ b/client/src/components/Header/Header.css
@@ -7,6 +7,35 @@
   border-width: 1px;
 }
 
+.header-content {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 100%;
+}
+
+.header-top {
+  display: flex;
+  justify-content: center;
+  width: 100%;
+  margin-bottom: 1rem;
+}
+
+.header-bottom {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  position: relative;
+}
+
+.header-navbar-list {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex: 1;
+}
+
 .nav-button {
   /* padding: 0.8rem 1.5rem; */
   /* margin: 0 0.5rem; */
@@ -62,18 +91,6 @@
   filter: drop-shadow(0 0 2em #61dafbaa);
 }
 
-.header-navbar-list {
-  /* display: grid; */
-  display: flex;
-  align-items: center;
-  justify-content: center;
-
-  /* grid-template-columns: repeat(4, 1fr); */
-  /* gap: 1rem; */
-
-  /* grid-template-columns: 100; */
-  /* grid-template-rows: 100; */
-}
 
 @keyframes logo-spin {
   from {
@@ -91,10 +108,17 @@
 }
 
 @media (max-width: 37.5em) {
+  .header-bottom {
+    flex-direction: column;
+    gap: 1rem;
+  }
+  
   .header-navbar-list {
     display: grid;
     justify-items: center;
     grid-template-columns: repeat(2, 1fr);
-    grid-template-rows: repeat(2, auto);    
+    grid-template-rows: repeat(2, auto);
+    flex: none;
+    width: 100%;
   }
 }
