--- a/client/src/index.css
+++ b/client/src/index.css
@@ -54,8 +54,51 @@ button:focus-visible {
   outline: 4px auto -webkit-focus-ring-color;
 }
 
+/* Dark theme */
+.dark-theme {
+  background-color: black;
+
+  --title-color: white;
+  --description-color: gray;
+  --undertext-color: white;
+  --border-separator-color: gray;
+  --border-big-separator-color: white;
+  --global-background-color: black;
+}
+
+.dark-theme a:hover {
+  color: #747bff;
+}
+
+.dark-theme button {
+  background-color: var(--global-background-color);
+  color: white;  
+}
+
+/* Light theme */
+.light-theme {
+  background-color: #ffffff;
+
+  --title-color: black;
+  --description-color: gray;
+  --undertext-color: black;
+  --border-separator-color: gray;
+  --border-big-separator-color: black;
+  --global-background-color: white;
+}
+
+.light-theme a:hover {
+  color: #747bff;
+}
+
+.light-theme button {
+  background-color: var(--global-background-color);
+  color: black;
+}
+
+/* Fallback for when no theme class is applied (initial load) */
 @media (prefers-color-scheme: dark) {
-  :root {
+  :root:not(.light-theme):not(.dark-theme) {
     background-color: black;
 
     --title-color: white;
@@ -66,18 +109,18 @@ button:focus-visible {
     --global-background-color: black;
   }
 
-  a:hover {
+  :root:not(.light-theme):not(.dark-theme) a:hover {
     color: #747bff;
   }
 
-  button {
+  :root:not(.light-theme):not(.dark-theme) button {
     background-color: var(--global-background-color);
     color: white;  
   }
 }
 
 @media (prefers-color-scheme: light) {
-  :root {
+  :root:not(.light-theme):not(.dark-theme) {
     background-color: #ffffff;
 
     --title-color: black;
@@ -88,12 +131,12 @@ button:focus-visible {
     --global-background-color: white;
   }
 
-  a:hover {
+  :root:not(.light-theme):not(.dark-theme) a:hover {
     color: #747bff;
   }
 
-  button {
+  :root:not(.light-theme):not(.dark-theme) button {
     background-color: var(--global-background-color);
-    color: color;
+    color: black;
   }
 }
