--- a/client/src/pages/WriterPage/WriterPage.css
+++ b/client/src/pages/WriterPage/WriterPage.css
@@ -1,4 +1,25 @@
+.writer-profile-section {
+    text-align: center;
+    margin-bottom: 10rem;
+}
+
+.writer-name {
+    color: var(--title-color);
+    margin-bottom: 1rem;
+}
+
+.writer-description {
+    color: var(--description-color);
+    margin-top: 1rem;
+    font-size: 1.1rem;
+    line-height: 1.6;
+    max-width: 600px;
+    margin-left: auto;
+    margin-right: auto;
+}
+
 .writer-page-profile-img {
     border-radius: 50%;
     width: 90px;
+    margin: 1rem 0;
 }
