--- a/client/src/components/ArticleListItem/ArticleListItem.css
+++ b/client/src/components/ArticleListItem/ArticleListItem.css
@@ -15,6 +15,7 @@
 
 .article-list-item-head-image {
   width: 100%;
+  margin-bottom: 0.5rem;
 }
 
 /* From the BBC website, in an Article List Item, the font sizes are:
