--- a/client/src/pages/WriterPage/WriterPage.css
+++ b/client/src/pages/WriterPage/WriterPage.css
@@ -21,5 +21,12 @@
 .writer-page-profile-img {
     border-radius: 50%;
     width: 90px;
-    margin: 1rem 0;
+    height: 90px;
+    margin: 1rem auto;
+    display: block;
+    overflow: hidden;
+}
+
+.writer-page-profile-img .image-content {
+    border-radius: 50%;
 }
