--- a/client/src/pages/HomePage/HomePage.css
+++ b/client/src/pages/HomePage/HomePage.css
@@ -8,6 +8,11 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
+  margin-bottom: 3rem;
+}
+
+.home-section:last-child {
+  margin-bottom: 0;
 }
 
 .home-section-title {
